style.css
/* Общие стили --------------------------------------------------------------------------------- */

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	line-height: 1;
	text-decoration: none;
	color: white;
}

body {
	background-color: black;
	font-family: 'Poppins', sans-serif;
	font-weight: 300;
	font-style: normal;
	font-size: 21px;
	color: white;
}

.text {
	font-family: 'Poppins', system-ui;
	font-weight: 200;
	font-style: normal;
	line-height: 130%;
}

.title {
	font-size: 48px;
}

.button {
	font-size: 17px;
	padding: 10px 16px;
	background: transparent;
	border: 2px solid #6d95fc;
	border-radius: 2px;
	cursor: pointer;
	max-width: 400px;
}

.blue {
	color: #6d95fc;
}

.white {
	color: white;
}

.bold {
	font-weight: 700;
}

.wrapper {
	max-width: 1280px;
	margin: 0 auto;
	position: relative;
	overflow: hidden;
}

.hr {
	display: block;
	height: 1px;
	border: 0;
	border-top: 3px solid;
	margin: 1em 0;
	padding: 0;
	max-width: 97.5px;
}

.hr__white {
	border-top: 3px solid white;
}

.hr__blue {
	border-top: 3px solid #6d95fc;
}



@media (width < 1280px) {
	.about__inner, .banner__inner, .nav__inner, .reviews__inner, .contact-us__inner, .why-us__inner, .services__inner, .projects__inner, .footer__inner {

		margin-inline: 20px !important; 
	}
}

/* Header --------------------------------------------------------------------------------------- */

.nav__inner {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding-top: 20px;
}

.nav__links {
	display: flex;
	gap: 53px;
	list-style: none;
	justify-content: space-evenly;
	align-items: center;
}

.logo-title {
	font-size: 50px;
	text-align: center;
}

.logo-subtitle {
	text-align: center;
	font-size: 14px;
}

.nav__icon {
	vertical-align: middle;
}

.nav__menu {
	display: none;

}


.nav__logo {
	margin-right: 65px;
}

@media (width <= 1215px) {

	.nav__menu {
		display: block;
	}

}


@media (width <= 500px) {
	.nav__logo-title {
		font-size: 40px;
	}


		.nav__links {
		gap: 16px;
}
}




/* Banner --------------------------------------------------------------------------------------- */

.banner {
	position: relative;
}

.banner__inner {
	margin: 184px 0;
	max-width: 524px;
}

.suptitle {
	font-size: 21px;
}

.banner__suptitle {
	margin-bottom: 41px;
}

.banner__title {
	font-size: 50px;
	line-height: 111.5%;
	margin-bottom: 41px;
}

.hr__banner {
	margin-bottom: 41px;
	max-width: 144px;
}

.banner__text {
	margin-bottom: 41px;
}

.banner__img {
	position: absolute;
	left: 350px;

	z-index: -1;
}

@media (width <= 480px) {
	 

	.text {
		font-size: 17px;
	}

	.title {
		font-size: 28px !important;
		margin-bottom: 10px !important;
	}

	.banner__title {
		font-size: 30px;
		max-width: 75vw;
	}
	
	.suptitle {
		font-size: 17px;
		margin-bottom: 10px !important;
	}

	.hr {
		margin-top: 20px !important;
		margin-bottom: 20px !important;
	}



}


/* About --------------------------------------------------------------------------------------- */

.about__inner {
	display: flex;
	align-items: center;	
	gap: 110px;
}

.about__suptitle {
	margin-bottom: 26px;
}

.about__description > * {
	margin-bottom: 26px;
}

.about__description > *:last-child {
	margin-bottom: 0;
}

.about__img {
	display: flex;
	justify-content: center;
}

.about__button {
	padding: 10px 30px;
}

.about__title {
	max-width: 450px;
}

@media (width <= 1005px) {
	.about__inner  {
		flex-direction: column-reverse;
		gap: 0px;
	}

	.services__inner {
		flex-direction: column;
	}

	.about__img img {
		width: 75%;
	}

@media (width <= 480px) {
	.about__description > * {
		margin-bottom: 20px;
	}

	.about__description > *:last-child {
		margin-top: 25px;
	}

	.about__title {
		max-width: 300px;
	}
	
}




	
}


/* Services -------------------------------------------------------------------------------------- */

.services__inner {
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	margin-top: 134px;
	margin-bottom: 145px;
}

.services__description {
	max-width: 500px;
}

.services__description > * {
	margin-bottom: 32px;
}

.services__description > *:last-child {
	margin-bottom: 81px;
}

.services__suptitle {
	margin-top: 80px;
}

.services__cards {
	display: grid;
	grid-template-columns: 1fr 1fr;
	gap: 20px;
}

.card {
	max-width: 280px;
	text-align: center;
}

.card__text {
	font-size: 17px;
	max-width: 226px;
	line-height: 122%;
	font-weight: 200;
}

.card__img img {
	height: 85px;
}

.card__img {
	margin-bottom: 20px;
}

.card__inner {
	margin: 30px;
}

.card__title {
	margin-bottom: 6px;
}

@media (width < 480px) {
	.services__cards {
		grid-template-columns: 1fr;
	}

	.services__title {
		max-width: 300px;
	}
}

@media (width < 600px) {
	.services__inner {
		margin-top: 35px;
	}
}



/* Statistics ------------------------------------------------------------------------------------ */

.statistics__elements {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
}

.statistics__element {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.statistics__number {
	font-size: 64px;
}

.statistics__inner {
	margin: 0px auto 65px auto;
}

@media (width < 1000px) {
	.statistics__elements {
	grid-template-columns: repeat(2, 1fr);
	gap: 40px 80px;
	max-width: 500px;
	}

 .statistics__inner {
	display: flex;
	justify-content: center;

 }

}



@media (width < 530px) { 
	.statistics__elements {
		grid-template-columns: 1fr;
		gap: 60px;
	}
}


/* Projects ------------------------------------------------------------------------------------- */


.projects__subtitle {
	display: flex;
	align-items: center;
	gap: 14.5px;
	justify-content: center;
	margin-bottom: 49px;
}

.projects__title {
	margin: 110px auto 25px auto;
	max-width: 688px;
	text-align: center;
}

.hr__projects {
	width: 100%;
	max-width: 97.5px;
}

.swiper-slide img {
	max-height: 520px;
	height: auto;
}
/* ... */

